--- a/src/css/Principal.css
+++ b/src/css/Principal.css
@@ -20,7 +20,7 @@ button {
     padding: 20px;
     margin: 20px;
     background-color: #FFA831;
-     border-radius: 15px;
+    border-radius: 15px;
   
 }
 
@@ -82,4 +82,34 @@ Link {
     width: 10rem;
     height: 6rem;
     }
- 
+ .button-add-items{
+     margin: 0%;
+     padding: 0%;
+/* width: ;
+height: ;
+*/
+border-radius: 5%; 
+
+ }
+ .button-reset-items{
+    margin: 0%;
+    padding: 0%;
+    border-radius: 5%; 
+/* background-image: url('https://img.icons8.com/ios-filled/50/000000/add--v1.png'); */
+ }
+ .button-reset-items:hover{
+background-color: #f1dc69;
+ }
+ .button-add-items:hover{
+    background-color: #f1dc69;
+     }
+
+     .active-content {
+         display: block;
+     }
+     .content {
+         display: none;
+     } 
+     
+  
+   
